k8s-manifest/backend/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  serviceName: mongo
  replicas: 2
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mvertes/alpine-mongo
          command:
            - mongod
            - "--replSet"
            - rs0
            - "--smallfiles"
            - "--bind_ip"
            - 0.0.0.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
        - name: mongo-sidecar
          image: cvallance/mongo-k8s-sidecar
  volumeClaimTemplates:
   - metadata:
       name: mongo-storage
     spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 50Mi
