k8s-manifest/backend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: api.devops.k8s
      http:
        paths:
          - path: /.*
            backend:
              serviceName: backend
              servicePort: 5000
